...
        android:id="@+id/textView2"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintText"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />
...
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/LoginName" />

</LinearLayout>
